tdf#134299 DOCX shape export: fix relative size of shapes

This patch completes our previous work on the import of the size of a shape
relative to the size of margins.
So documents with this setting can be roundtripped without data loss.

This fixes bugs: tdf#134300, tdf#134828, tdf#134830, tdf#134834, tdf#134835.

Co-authored-by: Szabolcs Tóth

Change-Id: I42cd7693c80cc62f71560e9ab0f226b51aff6bb7